Fix issue where input for project name in the popup was displaying too wide.

--- a/styles/style.css
+++ b/styles/style.css
@@ -255,8 +255,12 @@ ul.projects {
   margin-top: 15px;
 }
 
-#popup textarea {
+.popup textarea {
   resize: none;
+}
+
+/* Task list for projects */
+.project-task-list {
 }
 
 /* Container that displays list of tasks*/
